[package]
name = "aptos-client-sdk"
version = "0.1.0"
edition = "2021"

[[example]]
name = "mint"
path = "examples/mint.rs"

[[example]]
name = "burn"
path = "examples/burn.rs"

[[example]]
name = "event_listener"
path = "examples/event_listener.rs"

[[example]]
name = "query"
path = "examples/query.rs"


[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
anyhow = "1.0"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
async-trait = "0.1"
bcs = "0.1.6"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
dotenv = "0.15"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
